--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@opentelemetry/resources": "^1.10.0",
     "@opentelemetry/sdk-trace-node": "^1.10.0",
     "@opentelemetry/semantic-conventions": "^1.10.0",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
